gccida/c3/output_constant_def
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constant_def/src/varasm.c:3772:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constant_def/src/varasm.c:3774:22: error: use of undeclared identifier 'machine_mode'
rtl = gen_rtx_MEM( ( machine_mode)v13, v14); 
                     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/output_constant_def/src/obj/varasm.o] Error 1
